; ModuleID = '/home/carl/AnghaBench/linux/drivers/iio/adc/extr_bcm_iproc_adc.c_iproc_adc_interrupt_thread.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/iio/adc/extr_bcm_iproc_adc.c_iproc_adc_interrupt_thread.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iio_dev = type { i32 }
%struct.iproc_adc_priv = type { i32 }

@IPROC_INTERRUPT_STATUS = common dso_local global i32 0, align 4
@IPROC_INTERRUPT_MASK = common dso_local global i32 0, align 4
@IPROC_ADC_INTR_MASK = common dso_local global i32 0, align 4
@IPROC_ADC_INTR = common dso_local global i32 0, align 4
@IRQ_WAKE_THREAD = common dso_local global i32 0, align 4
@IRQ_NONE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @iproc_adc_interrupt_thread to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iproc_adc_interrupt_thread(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.iio_dev*, align 8
  %10 = alloca %struct.iproc_adc_priv*, align 8
  store i32 %0, i32* %4, align 4
  store i8* %1, i8** %5, align 8
  %11 = load i8*, i8** %5, align 8
  %12 = bitcast i8* %11 to %struct.iio_dev*
  store %struct.iio_dev* %12, %struct.iio_dev** %9, align 8
  %13 = load %struct.iio_dev*, %struct.iio_dev** %9, align 8
  %14 = call %struct.iproc_adc_priv* @iio_priv(%struct.iio_dev* %13)
  store %struct.iproc_adc_priv* %14, %struct.iproc_adc_priv** %10, align 8
  %15 = load %struct.iproc_adc_priv*, %struct.iproc_adc_priv** %10, align 8
  %16 = getelementptr inbounds %struct.iproc_adc_priv, %struct.iproc_adc_priv* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i32, i32* @IPROC_INTERRUPT_STATUS, align 4
  %19 = call i32 @regmap_read(i32 %17, i32 %18, i32* %7)
  %20 = load %struct.iproc_adc_priv*, %struct.iproc_adc_priv** %10, align 8
  %21 = getelementptr inbounds %struct.iproc_adc_priv, %struct.iproc_adc_priv* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = load i32, i32* @IPROC_INTERRUPT_MASK, align 4
  %24 = call i32 @regmap_read(i32 %22, i32 %23, i32* %8)
  %25 = load i32, i32* %7, align 4
  %26 = load i32, i32* %8, align 4
  %27 = and i32 %25, %26
  store i32 %27, i32* %7, align 4
  %28 = load i32, i32* %7, align 4
  %29 = load i32, i32* @IPROC_ADC_INTR_MASK, align 4
  %30 = and i32 %28, %29
  %31 = load i32, i32* @IPROC_ADC_INTR, align 4
  %32 = ashr i32 %30, %31
  store i32 %32, i32* %6, align 4
  %33 = load i32, i32* %6, align 4
  %34 = icmp ne i32 %33, 0
  br i1 %34, label %35, label %37

35:                                               ; preds = %2
  %36 = load i32, i32* @IRQ_WAKE_THREAD, align 4
  store i32 %36, i32* %3, align 4
  br label %39

37:                                               ; preds = %2
  %38 = load i32, i32* @IRQ_NONE, align 4
  store i32 %38, i32* %3, align 4
  br label %39

39:                                               ; preds = %37, %35
  %40 = load i32, i32* %3, align 4
  ret i32 %40
}

declare dso_local %struct.iproc_adc_priv* @iio_priv(%struct.iio_dev*) #1

declare dso_local i32 @regmap_read(i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
